# .github

./: .gitignore  CLAUDE.md  README.md
bair/: README.md  pyproject.toml
bair/frontend/: index.html  local_secret_helper.py  observability.html
bair/frontend/css/: styles.css
bair/frontend/data/: issues.json  observability-mock.json
bair/frontend/diagrams/: bair-multi-perspective.html  bair-pipelines-overview-2026-05-13.html  bl-overview-2026-05-13.html  deploy-notifications.html  legacy-air-migration.html  rfe-fix-explained.html  rfe-netdocs-vs-mongo.html  v1-v2-migration-dashboard.html  vair-air-migration.html  vair-multi-perspective.html  vair-pipelines-overview-2026-05-13.html  vis-86-expectation-vs-reality.html  vis-86-options.html  vis-86-paths.html  visal-18-key-mismatch.html
bair/frontend/js/: particles.js
bair/frontend/py/: api.py  app.py  auth.py  bento.py  carousel.py  chat.py  config.py  dispatch.py  filters.py  mock.py  observability.py  pulls.py  runs.py  start_work.py  state.py  stats.py  table.py  ux.py
bair/src/bair/: __init__.py  __main__.py
bair/src/bair/config/: __init__.py  changelog.py  issue_rank.py  preflight.py  resolve.py  retro.py  review.py
bair/src/bair/domain/: css_analyzer.py  deep_heuristic.py  issue_scoring.py  resolve_prompts.py  rules_triage.py
bair/src/bair/gatherers/: __init__.py  css_health.py  deep_analysis.py  learnings.py  prior_art.py  repo_rules.py  retro_evidence.py
bair/src/bair/pipelines/: __init__.py  changelog.py  claude_review.py  (+8 more)
bair/tests/: test_gatekeep_rules.py  test_prompts.py  test_repo_rules.py
(+30 files in other folders)
